add GET /happenings endpoint
